syntax = "proto3";

package services.rector;

import "resources/common/database/database.proto";
import "resources/filestore/file.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/rector;rector";

message ListFilesRequest {
  resources.common.database.PaginationRequest pagination = 1 [(validate.rules).message.required = true];
  optional string path = 2 [(validate.rules).string.max_len = 128];
}

message ListFilesResponse {
  resources.common.database.PaginationResponse pagination = 1;
  repeated resources.filestore.FileInfo files = 2;
}

message UploadFileRequest {
  string prefix = 1;
  string name = 2;
  resources.filestore.File file = 3 [(validate.rules).message.required = true];
}

message UploadFileResponse {
  resources.filestore.FileInfo file = 1;
}

message DeleteFileRequest {
  string path = 1;
}

message DeleteFileResponse {}

service RectorFilestoreService {
  // @perm: Name=SuperUser
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  // @perm: Name=SuperUser
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  // @perm: Name=SuperUser
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}
